--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 
       <section class="books-main-container">
         <div class="finded-books">
-          <h3><span>8</span> Libros disponibles</h3>
-          <div id="finded-book-container" class="finded-book-container"></div>
+          <h3><span id="book-count">8</span> Libros disponibles</h3>
+          <div id="available-book-container" class="available-book-container"></div>
         </div>
 
         <div class="reading-list">
@@ -48,6 +48,6 @@
       <p>Hecho con amor por Danny Meirno</p>
     </footer>
 
-    <script type="module" src="./script.js"></script>
+    <script type="module" src="./app.js"></script>
   </body>
 </html>
